src/rules/snapshots/pg_migration_lint__rules__pgm020__tests__fires_on_existing_table_all.snap
---
source: src/rules/pgm020.rs
expression: findings
---
- rule_id: PGM020
  severity: Minor
  message: "DISABLE TRIGGER ALL on existing table 'orders' suppresses all triggers including foreign key enforcement. If this is not re-enabled in the same migration, referential integrity guarantees are lost."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
