src/rules/snapshots/pg_migration_lint__rules__pgm020__tests__fires_on_existing_table_named.snap
---
source: src/rules/pgm020.rs
expression: findings
---
- rule_id: PGM020
  severity: Minor
  message: "DISABLE TRIGGER 'my_trigger' on existing table 'orders' suppresses the named trigger. If this trigger enforces business logic and is not re-enabled in the same migration, those guarantees are lost."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
