src/rules/snapshots/pg_migration_lint__rules__pgm020__tests__fires_on_existing_table_user.snap
---
source: src/rules/pgm020.rs
expression: findings
---
- rule_id: PGM020
  severity: Minor
  message: "DISABLE TRIGGER USER on table 'orders' suppresses user-defined triggers (FK enforcement triggers are not affected). If this is not re-enabled in the same migration, business logic guarantees are lost."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
